--- a/DereGuide/Base.lproj/Localizable.strings
+++ b/DereGuide/Base.lproj/Localizable.strings
@@ -617,7 +617,7 @@
 
 /* new in 1.3.2 */
 "得分分布" = "得分分布";
-"Great占比%(此项设置并未考虑因专注技能导致Great不受加成的因素)" = "Great占比%(此项设置并未考虑因专注技能导致Great不受加成的因素)";
+"GREAT占比%(不考虑专注技能只加成PERFECT的因素)" = "GREAT占比%(不考虑专注技能只加成PERFECT的因素)";
 "小屋加成%" = "小屋加成%";
 "模拟次数" = "模拟次数";
 "* 不含后援值，歌曲模式为常规模式" = "* 不含后援值，歌曲模式为常规模式";
