--- a/DereGuide/zh-Hant.lproj/Localizable.strings
+++ b/DereGuide/zh-Hant.lproj/Localizable.strings
@@ -608,7 +608,7 @@
 /* new in 1.3.2 */
 
 "得分分布" = "得分分佈";
-"Great占比%(此项设置并未考虑因专注技能导致Great不受加成的因素)" = "Great佔比%(此項設定並未考慮因專注技能導致Great不受加成的因素)";
+"GREAT占比%(不考虑专注技能只加成PERFECT的因素)" = "GREAT佔比%(不考慮專注技能只加成PERFECT的因素)";
 "小屋加成%" = "小屋加成%";
 "模拟次数" = "模擬次數";
 "* 不含后援值，歌曲模式为常规模式" = "* 不含後援值，歌曲模式為常規模式";
