--- a/DereGuide/en.lproj/Localizable.strings
+++ b/DereGuide/en.lproj/Localizable.strings
@@ -558,7 +558,7 @@
 // Skill Type: All Round
 "全才" = "All Round";
 
-"* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定区间中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* Optimistic score assumes that skills always activate.\n* In optimistic score 1, it takes the best score of each note in the range to be judged as Perfect\n* The simulation result is taken from the lowest score of simulation times' top x%. Results will vary between simulations.\n* In Groove or LIVE Parade mode, the partner's leader is ignored automatically.";
+"* 极限分数中所有技能100%触发\n* 极限分数1中note取PERFECT判定区间中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* Optimistic score assumes that skills always activate.\n* In optimistic score 1, it takes the best score of each note within its Perfect duration.\n* The simulation result is taken from the lowest score of simulation times' top x%. Results will vary between simulations.\n* In Groove or LIVE Parade mode, the partner's leader is ignored automatically.";
 
 "一般计算" = "Calculate";
 "模拟计算" = "Simulate";
@@ -728,7 +728,7 @@
 "使你的生命不会减少" = "you will not lose health";
 "使所有音符恢复你 %d 点生命" = "all notes will restore %d health";
 "消耗 %2$d 生命，PERFECT音符获得 %1$d%% 的分数加成，并且NICE/BAD音符不会中断COMBO" = "%2$d life will be consumed, then: Perfect notes receive a %1$d%% score bonus, and Nice/Bad notes will not break combo";
-"使所有PERFECT音符获得 %d%% 的分数加成，且使PERFECT判定区间的时间范围缩小" = "Perfect notes will receive a %d%% score bonus, but the range of note to be judged as Perfect becomes shorter";
+"使所有PERFECT音符获得 %d%% 的分数加成，且使PERFECT判定区间的时间范围缩小" = "Perfect notes will receive a %d%% score bonus, but become harder to hit";
 "会发生有趣的事情" = "something interesting will happen";
 "使所有PERFECT音符恢复你 %d 点生命" = "Perfect notes will restore %d health";
 "使所有PERFECT/GREAT音符恢复你 %d 点生命" = "Great/Perfect notes will restore %d health";
