--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -71,7 +71,7 @@
 "单抽" = "１回引く";
 
 /* 模拟抽卡页面 */
-"卡池" = "ｶﾞｼｬ";
+"卡池" = "ガシャ";
 
 /* 卡片详情页 */
 "卡片属性" = "ステータス";
@@ -453,8 +453,8 @@
 "您的设备未开启应用内购买。" = "あなたの端末にはアプリ内購入機能を有効にしておりません。";
 
 "已收藏" = "ブクマした";
-"未收藏" = "ブクマしない";
-"更新时间" = "更新時間";
+"未收藏" = "ブクマしてない";
+"更新时间" = "更新日時";
 "稀有度" = "レア度";
 "相册编号" = "アルバム順";
 
@@ -473,7 +473,7 @@
 "身高" = "身長";
 "体重" = "体重";
 "五十音" = "五十音";
-"游戏编号" = "ゲーム内番号";
+"游戏编号" = "ゲーム内部番号";
 "生日" = "誕生日";
 
 "活动名" = "イベント";
@@ -495,7 +495,7 @@
 
 "卡池名称或描述" = "ガシャ";
 "限定卡池" = "限定ガシャ";
-"FES限定卡池" = "FES限ガシャ";
+"FES限定卡池" = "フェス限ガシャ";
 "单属性卡池" = "タイプセレクト";
 "普通卡池" = "恒常ガシャ";
 
@@ -511,9 +511,9 @@
 "歌曲分数档位" = "ハイスコアランキング";
 "查看完整图表" = "チャートを見る";
 
-"最后更新时间：" = "最後アップデート時間：";
+"最后更新时间：" = "最終アップデート時間：";
 "当前Pt" = "現在pt";
-"增速(/h)" = "増速(/h)";
+"增速(/h)" = "時速 (/h)";
 "最终Pt" = "最終pt";
 "当前分数" = "現在スコア";
 "最终分数" = "最終スコア";
@@ -549,11 +549,11 @@
 "卡池封面" = "ガシャヘッダー";
 
 
-"队伍中存在未知的技能类型，计算结果可能不准确。" = "ユニットに未定義(undefined)のスキルタイプを存在します。計算結果の正しさは保証できません。";
+"队伍中存在未知的技能类型，计算结果可能不准确。" = "ユニットに未定義(undefined)のスキルタイプを存在します。計算結果の正確性は保証できません。";
 
 /* new in 1.2.3 */
-"变更时间" = "変更時間";
-"首次出现时间" = "初登場時間";
+"变更时间" = "変更日時";
+"首次出现时间" = "初登場日時";
 "未找到对应谱面，建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。如果更新后仍未找到，可能是官方还未更新此谱面。" = "対応するの譜面データが見つかりません。また、現時点に公式が譜面データを配布していません。現在進行中の更新が終わるのをお待ち下さい。または、手動で更新を行ってください。";
 
 /* new in 1.2.4 */
@@ -736,7 +736,7 @@
 "使所有PERFECT音符恢复你 %d 点生命" = "PERFECTでライフ %d 回復";
 "使所有PERFECT/GREAT音符恢复你 %d 点生命" = "PERFECT/GREATでライフ %d 回復";
 "使所有PERFECT/GREAT/NICE音符恢复你 %d 点生命" = "PERFECT/GREAT/NICEでライフ %d 回復";
-"使当前发动的分数加成和COMBO加成额外提高 %d%%，生命恢复和护盾额外恢复 1 点生命，改判范围增加一档" = "発動中のスコア・COMBOのボーナス %d%% アップ、ライフ回復・ガードする時ライフ1回復、判定強化の適用範囲を1段階広ける";
+"使当前发动的分数加成和COMBO加成额外提高 %d%%，生命恢复和护盾额外恢复 1 点生命，改判范围增加一档" = "発動中のスコア・COMBOのボーナス %d%% アップ、ライフ回復・ガードする時ライフ1回復、判定強化の適用範囲を1段階広げる";
 "当仅有Cute偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "Cuteアイドルのみ編成時、PERFECTのスコア %d%% アップ、COMBOボーナス %d%% アップ";
 "当仅有Cool偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "Coolアイドルのみ編成時、PERFECTのスコア %d%% アップ、COMBOボーナス %d%% アップ";
 "当仅有Passion偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "Passionアイドルのみ編成時、PERFECTのスコア %d%% アップ、COMBOボーナス %d%% アップ";
@@ -744,7 +744,7 @@
 
 "每 %d 秒，" = "%d 秒毎、";
 "有 %@%% 的几率" = "%@%% の確率で";
-"，持续 %@ 秒。" = "、%@ 秒間に継続します。";
+"，持续 %@ 秒。" = "、%@ 秒間継続します。";
 
 "所有Cute" = "Cuteアイドル";
 "所有Cool" = "Coolアイドル";
@@ -779,7 +779,7 @@
 "出演MV" = "出演MV"; // 卡详情页面和角色详情页面增加该偶像出演过的mv
 "MV站位" = "MVポジション";
 "选项" = "オプション";
-"隐藏难度文字" = "難易度ﾃｷｽﾄを隠す";
+"隐藏难度文字" = "難易度テキストを隠す";
 "如需隐藏某些难度，或隐藏难度描述文字，请使用侧边菜单" = "一部の難易度を隠すや、難易度のテキストを隠したいの場合、サイドメニューを利用してください";
 
 /* new in 1.6.1 */
@@ -787,5 +787,5 @@
 "绘制参数" = "描画パラメータ";
 "与歌曲颜色相同" = "楽曲タイプと同じ色";
 "纵向缩放比例" = "縦向きスケーリング";
-"* 极限分数中所有技能100%触发\n* 极限分数1中note取PERFECT判定区间中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限スコアは特技100%発動として計算しています\n* 極限スコア1の計算にPERFECT判定は最適値を取りますよう補正を行います\n* シミュレート計算は設定回数のシミュレートを行い、並べたシミュレート結果のx%にそれぞれの最低値を取ります、結果は毎回異なります\n* GrooveまたはLIVE Paradeのモードを設定した時、ゲストは無視しています"; // 不再指明±0.06秒, 而是根据难度和note类型变化
+"* 极限分数中所有技能100%触发\n* 极限分数1中note取PERFECT判定区间中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限スコアは特技100%発動として計算しています\n* 極限スコア1の計算にPERFECT判定は最適値を取るよう補正を行います\n* シミュレート計算は設定回数のシミュレートを行い、並べたシミュレート結果のx%にそれぞれの最低値を取ります、結果は毎回異なります\n* GrooveまたはLIVE Paradeのモードを設定した時、ゲストは無視しています"; // 不再指明±0.06秒, 而是根据难度和note类型变化
 "GREAT占比%(不考虑专注技能只加成PERFECT的因素)" = "GREAT割合%(ｺﾝｾﾝﾄﾚｰｼｮﾝによるGREATは考慮しません)";
