--- a/DereGuide/Base.lproj/Localizable.strings
+++ b/DereGuide/Base.lproj/Localizable.strings
@@ -791,4 +791,5 @@
 "纵向缩放比例" = "纵向缩放比例";
 
 /* new in 1.7.0 */
-"自动播放时显示辅助线" = "自动播放时显示辅助线";
+"自动播放时显示按键区辅助线" = "自动播放时显示按键区辅助线";
+"显示网格和标注" = "显示网格和标注";
