no longer support skill or rarity search in card list, because they can be filtered in the side menu and may lead to confused result

--- a/DereGuide/Base.lproj/Localizable.strings
+++ b/DereGuide/Base.lproj/Localizable.strings
@@ -190,7 +190,7 @@
 "日文名/罗马音/CV" = "日文名/罗马音/CV";
 
 /* 搜索框文字, 不宜过长 */
-"日文名/罗马音/技能/稀有度" = "日文名/罗马音/技能/稀有度";
+"日文名/罗马音" = "日文名/罗马音";
 
 /* 生日提醒页面 */
 "时区" = "时区";
@@ -793,3 +793,4 @@
 /* new in 1.7.0 */
 "自动播放时显示按键区辅助线" = "自动播放时显示按键区辅助线";
 "显示网格和标注" = "显示网格和标注";
+"正在完成更新" = "正在完成更新";
