--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -188,7 +188,7 @@
 "日文名/罗马音/CV" = "名前/ローマ字/CV";
 
 /* 搜索框文字, 不宜过长 */
-"日文名/罗马音/技能/稀有度" = "名前/ローマ字/特技/レア度";
+"日文名/罗马音" = "名前/ローマ字";
 
 /* 生日提醒页面 */
 "时区" = "タイムゾーン";
