--- a/DereGuide/zh-Hant-TW.lproj/Localizable.strings
+++ b/DereGuide/zh-Hant-TW.lproj/Localizable.strings
@@ -191,7 +191,7 @@
 "日文名/罗马音/CV" = "日文名/羅馬音/CV";
 
 /* 搜索框文字, 不宜过长 */
-"日文名/罗马音/技能/稀有度" = "日文名/羅馬音/技能/稀有度";
+"日文名/罗马音" = "日文名/羅馬音";
 
 /* 生日提醒页面 */
 "时区" = "時區";
