fix #19 in settings page

--- a/DereGuide/Base.lproj/Localizable.strings
+++ b/DereGuide/Base.lproj/Localizable.strings
@@ -790,6 +790,24 @@
 "与歌曲颜色相同" = "与歌曲颜色相同";
 "纵向缩放比例" = "纵向缩放比例";
 
+// settings from storyboard
+"启动时自动检查更新" = "启动时自动检查更新";
+"设置" = "设置";
+"数据" = "数据";
+"移动网络下加载卡片大图" = "移动网络下加载卡片大图";
+"缓存所有图片" = "缓存所有图片";
+"清除缓存数据" = "清除缓存数据";
+"反馈" = "反馈";
+"发送邮件" = "发送邮件";
+"Twitter" = "Twitter";
+"评价" = "评价";
+"关于" = "关于";
+"支持作者" = "支持作者";
+"隐私政策" = "隐私政策";
+"版权声明" = "版权声明";
+"致谢" = "致谢";
+"当前版本" = "当前版本";
+
 /* new in 1.7.0 */
 "自动播放时显示按键区辅助线" = "自动播放时显示按键区辅助线";
 "显示网格和标注" = "显示网格和标注";
