--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -789,3 +789,21 @@
 "纵向缩放比例" = "縦向きスケーリング";
 "* 极限分数中所有技能100%触发\n* 极限分数1中note取PERFECT判定区间中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限スコアは特技100%発動として計算しています\n* 極限スコア1の計算にPERFECT判定は最適値を取るよう補正を行います\n* シミュレート計算は設定回数のシミュレートを行い、並べたシミュレート結果のx%にそれぞれの最低値を取ります、結果は毎回異なります\n* GrooveまたはLIVE Paradeのモードを設定した時、ゲストは無視しています"; // 不再指明±0.06秒, 而是根据难度和note类型变化
 "GREAT占比%(不考虑专注技能只加成PERFECT的因素)" = "GREAT割合%(ｺﾝｾﾝﾄﾚｰｼｮﾝによるGREATは考慮しません)";
+
+// settings from storyboard
+"启动时自动检查更新" = "アプリ起動時に更新の確認を行う";
+"设置" = "設定";
+"数据" = "データ";
+"移动网络下加载卡片大图" = "モバイル回線でﾌﾙｻｲｽﾞ画像を読み込む";
+"缓存所有图片" = "すべての画像をキャッシュする";
+"清除缓存数据" = "キャッシュ削除";
+"反馈" = "フィードバック";
+"发送邮件" = "メール";
+"Twitter" = "Twitter";
+"评价" = "レビュー";
+"关于" = "アプリについて";
+"支持作者" = "開発者を応援する";
+"隐私政策" = "プライバシーポリシー";
+"版权声明" = "著作権声明";
+"致谢" = "クレジット";
+"当前版本" = "現在のバージョン";
