--- a/DereGuide/zh-Hant.lproj/Localizable.strings
+++ b/DereGuide/zh-Hant.lproj/Localizable.strings
@@ -779,3 +779,21 @@
 "绘制参数" = "繪製引數";
 "与歌曲颜色相同" = "與歌曲顏色相同";
 "纵向缩放比例" = "縱向縮放比例";
+
+// settings from storyboard
+"启动时自动检查更新" = "啟動時自動檢查更新";
+"设置" = "設定";
+"数据" = "資料";
+"移动网络下加载卡片大图" = "行動網路下載入卡片大圖";
+"缓存所有图片" = "快取所有圖片";
+"清除缓存数据" = "清除快取資料";
+"反馈" = "反饋";
+"发送邮件" = "傳送郵件";
+"Twitter" = "Twitter";
+"评价" = "評價";
+"关于" = "關於";
+"支持作者" = "支援作者";
+"隐私政策" = "隱私政策";
+"版权声明" = "版權聲明";
+"致谢" = "致謝";
+"当前版本" = "當前版本";
