--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -807,3 +807,8 @@
 "版权声明" = "著作権声明";
 "致谢" = "クレジット";
 "当前版本" = "現在のバージョン";
+
+/* new in 1.7 */
+"自动播放时显示按键区辅助线" = "自动播放时显示按键区辅助线";
+"显示网格和标注" = "显示网格和标注";
+"正在完成更新" = "正在完成更新";
