--- a/DereGuide/zh-Hant.lproj/Localizable.strings
+++ b/DereGuide/zh-Hant.lproj/Localizable.strings
@@ -797,3 +797,8 @@
 "版权声明" = "版權聲明";
 "致谢" = "致謝";
 "当前版本" = "當前版本";
+
+/* new in 1.7 */
+"自动播放时显示按键区辅助线" = "自動播放時顯示按鍵區輔助線";
+"显示网格和标注" = "顯示網格和標註";
+"正在完成更新" = "正在完成更新";
