update skill type names

--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -387,25 +387,25 @@
 "高" = "高";
 
 /* 技能类型 */
-"强判" = "判定強化";
+"强判" = "PERFECTサポート";
 
 /* 技能类型 */
-"Combo保护" = "コンボ継続";
+"Combo保护" = "COMBOサポート";
 
 /* 技能类型 */
 "过载" = "オーバーロード";
 
 /* 技能类型 */
-"锁血" = "ライフガード";
+"锁血" = "ダメージガード";
 
 /* 技能类型 */
-"Combo加成" = "コンボボーナス";
+"Combo加成" = "COMBOボーナス";
 
 /* 技能类型 */
 "无技能" = "特技なし";
 
 /* 技能类型 */
-"分数加成" = "スコアアップ";
+"分数加成" = "SCOREボーナス";
 
 /* 技能类型 */
 "恢复生命" = "ライフ回復";
@@ -558,7 +558,7 @@
 
 /* new in 1.2.4 */
 // Skill Type: Concentration
-"专注" = "ｺﾝｾﾝﾄﾚｰｼｮﾝ";
+"专注" = "コンセントレーション";
 
 // Skill Type: Mimic
 "模仿" = "ものまね";
