--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -809,6 +809,6 @@
 "当前版本" = "現在のバージョン";
 
 /* new in 1.7 */
-"自动播放时显示按键区辅助线" = "自动播放时显示按键区辅助线";
-"显示网格和标注" = "显示网格和标注";
-"正在完成更新" = "正在完成更新";
+"自动播放时显示按键区辅助线" = "自動再生する時ノーツ落下補助線を表示";
+"显示网格和标注" = "グリッドと表記を表示";
+"正在完成更新" = "更新は間もなく終了です";
