add new skill types "encore" and " life sparkle"

--- a/DereGuide/Base.lproj/Localizable.strings
+++ b/DereGuide/Base.lproj/Localizable.strings
@@ -558,8 +558,8 @@
 // Skill Type: Concentration
 "专注" = "专注";
 
-// Skill Type: Mimic
-"模仿" = "模仿";
+// Skill Type: Encore
+"返场" = "返场";
 
 // Skill Type: All Round
 "全才" = "全才";
@@ -812,3 +812,9 @@
 "自动播放时显示按键区辅助线" = "自动播放时显示按键区辅助线";
 "显示网格和标注" = "显示网格和标注";
 "正在完成更新" = "正在完成更新";
+
+/* new in 1.7.1 */
+"生命闪耀" = "生命闪耀";
+"重复发动上一个其他偶像发动过的技能" = "重复发动上一个其他偶像发动过的技能";
+"获得额外的COMBO加成，当前生命值越高加成越高" = "获得额外的COMBO加成，当前生命值越高加成越高";
+"完成LIVE时，额外获得特别奖励" = "完成LIVE时，额外获得特别奖励";
