--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -560,8 +560,8 @@
 // Skill Type: Concentration
 "专注" = "コンセントレーション";
 
-// Skill Type: Mimic
-"模仿" = "ものまね";
+// Skill Type: Encore
+"返场" = "アンコール";
 
 // Skill Type: All Round
 "全才" = "オールラウンド";
@@ -812,3 +812,9 @@
 "自动播放时显示按键区辅助线" = "自動再生する時ノーツ落下補助線を表示";
 "显示网格和标注" = "グリッドと表記を表示";
 "正在完成更新" = "更新は間もなく終了です";
+
+/* new in 1.7.1 */
+"生命闪耀" = "ライブスパークル";
+"重复发动上一个其他偶像发动过的技能" = "直前に発動した他アイドルの特技効果を繰り返す";
+"获得额外的COMBO加成，当前生命值越高加成越高" = "ライフ値が多いほどCOMBOボーナスアップ";
+"完成LIVE时，额外获得特别奖励" = "LIVEクリア時、特別報酬を追加で獲得";
