--- a/DereGuide/zh-Hant-TW.lproj/Localizable.strings
+++ b/DereGuide/zh-Hant-TW.lproj/Localizable.strings
@@ -548,8 +548,8 @@
 // Skill Type: Concentration
 "专注" = "專注";
 
-// Skill Type: Mimic
-"模仿" = "模仿";
+// Skill Type: Encore
+"返场" = "返場";
 
 // Skill Type: All Round
 "全才" = "全才";
@@ -802,3 +802,9 @@
 "自动播放时显示按键区辅助线" = "自動播放時顯示按鍵區輔助線";
 "显示网格和标注" = "顯示網格和標註";
 "正在完成更新" = "正在完成更新";
+
+/* new in 1.7.1 */
+"生命闪耀" = "生命閃耀";
+"重复发动上一个其他偶像发动过的技能" = "重複發動上一個其他偶像發動過的技能";
+"获得额外的COMBO加成，当前生命值越高加成越高" = "獲得額外的COMBO加成，當前生命值越高加成越高";
+"完成LIVE时，额外获得特别奖励" = "完成LIVE時，額外獲得特別獎勵";
