minor fix for live score simulation

--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -787,7 +787,6 @@
 "绘制参数" = "描画パラメータ";
 "与歌曲颜色相同" = "楽曲タイプと同じ色";
 "纵向缩放比例" = "縦向きスケーリング";
-"* 极限分数中所有技能100%触发\n* 极限分数1中note取PERFECT判定区间中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限スコアは特技100%発動として計算しています\n* 極限スコア1の計算にPERFECT判定は最適値を取るよう補正を行います\n* シミュレート計算は設定回数のシミュレートを行い、並べたシミュレート結果のx%にそれぞれの最低値を取ります、結果は毎回異なります\n* GrooveまたはLIVE Paradeのモードを設定した時、ゲストは無視しています"; // 不再指明±0.06秒, 而是根据难度和note类型变化
 "GREAT占比%(不考虑专注技能只加成PERFECT的因素)" = "GREAT割合%(ｺﾝｾﾝﾄﾚｰｼｮﾝによるGREATは考慮しません)";
 
 // settings from storyboard
@@ -818,3 +817,4 @@
 "重复发动上一个其他偶像发动过的技能" = "直前に発動した他アイドルの特技効果を繰り返す";
 "获得额外的COMBO加成，当前生命值越高加成越高" = "ライフ値が多いほどCOMBOボーナスアップ";
 "完成LIVE时，额外获得特别奖励" = "LIVEクリア時、特別報酬を追加で獲得";
+"* 极限分数中所有技能100%触发\n* 极限分数1中note取PERFECT判定区间中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响\n* 存在一些暂时不支持计算平均分数的技能，平均分数将会显示为n/a" = "* 極限スコアは特技100%発動として計算しています\n* 極限スコア1の計算にPERFECT判定は最適値を取るよう補正を行います\n* シミュレート計算は設定回数のシミュレートを行い、並べたシミュレート結果のx%にそれぞれの最低値を取ります、結果は毎回異なります\n* GrooveまたはLIVE Paradeのモードを設定した時、ゲストは無視しています"; // 增加一条说明 对于部分新技能不支持计算平均分数 
