--- a/DereGuide/en.lproj/Localizable.strings
+++ b/DereGuide/en.lproj/Localizable.strings
@@ -558,7 +558,7 @@
 // Skill Type: All Round
 "全才" = "All Round";
 
-"* 极限分数中所有技能100%触发\n* 极限分数1中note取PERFECT判定区间中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* Optimistic score assumes that skills always activate.\n* In optimistic score 1, it takes the best score of each note within its Perfect duration.\n* The simulation result is taken from the lowest score of simulation times' top x%. Results will vary between simulations.\n* In Groove or LIVE Parade mode, the partner's leader is ignored automatically.";
+"* 极限分数中所有技能100%触发\n* 极限分数1中note取PERFECT判定区间中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响\n* 存在一些暂时不支持计算平均分数的技能，平均分数将会显示为n/a" = "* Optimistic score assumes that skills always activate.\n* In optimistic score 1, it takes the best score of each note within its Perfect duration.\n* The simulation result is taken from the lowest score of simulation times' top x%. Results will vary between simulations.\n* In Groove or LIVE Parade mode, the partner's leader is ignored automatically.\n* Some skill types are not supported in average score calculating. It will show \"n/a\" instead.";
 
 "一般计算" = "Calculate";
 "模拟计算" = "Simulate";
