--- a/DereGuide/zh-Hant-TW.lproj/Localizable.strings
+++ b/DereGuide/zh-Hant-TW.lproj/Localizable.strings
@@ -554,7 +554,7 @@
 // Skill Type: All Round
 "全才" = "全才";
 
-"* 极限分数中所有技能100%触发\n* 极限分数1中note取PERFECT判定区间中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限分數中所有技能100%觸發\n* 極限分數1中note取PERFECT判定區間中的最優值\n* 模擬計算結果是取模擬次數前x%內的最低分數，每次會略有不同\n* 選取Groove模式或LIVE Parade模式時會自動忽略好友隊長的影響";
+"* 极限分数中所有技能100%触发\n* 极限分数1中note取PERFECT判定区间中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响\n* 存在一些暂时不支持计算平均分数的技能，平均分数将会显示为n/a" = "* 極限分數中所有技能100%觸發\n* 極限分數1中note取PERFECT判定區間中的最優值\n* 模擬計算結果是取模擬次數前x%內的最低分數，每次會略有不同\n* 選取Groove模式或LIVE Parade模式時會自動忽略好友隊長的影響\n* 存在一些暫時無法計算平均分數的技能，平均分數將會顯示為n/a";
 
 "一般计算" = "一般計算";
 "模拟计算" = "模擬計算";
