--- a/DereGuide/Base.lproj/Localizable.strings
+++ b/DereGuide/Base.lproj/Localizable.strings
@@ -818,3 +818,6 @@
 "重复发动上一个其他偶像发动过的技能" = "重复发动上一个其他偶像发动过的技能";
 "获得额外的COMBO加成，当前生命值越高加成越高" = "获得额外的COMBO加成，当前生命值越高加成越高";
 "完成LIVE时，额外获得特别奖励" = "完成LIVE时，额外获得特别奖励";
+
+/* new in 1.7.2 */
+"最低%@等级" = "最低%@等级";
