--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -818,3 +818,6 @@
 "获得额外的COMBO加成，当前生命值越高加成越高" = "ライフ値が多いほどCOMBOボーナスアップ";
 "完成LIVE时，额外获得特别奖励" = "LIVEクリア時、特別報酬を追加で獲得";
 "* 极限分数中所有技能100%触发\n* 极限分数1中note取PERFECT判定区间中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响\n* 存在一些暂时不支持计算平均分数的技能，平均分数将会显示为n/a" = "* 極限スコアは特技100%発動として計算しています\n* 極限スコア1の計算にPERFECT判定は最適値を取るよう補正を行います\n* シミュレート計算は設定回数のシミュレートを行い、並べたシミュレート結果のx%にそれぞれの最低値を取ります、結果は毎回異なります\n* GrooveまたはLIVE Paradeのモードを設定した時、ゲストは無視しています\n* 一部平均スコアの計算に非対応する特技に対して、平均スコアは「n/a」と表示される場合があります"; // 增加一条说明 对于部分新技能不支持计算平均分数 
+
+/* new in 1.7.2 */
+"最低%@等级" = "%@ Lv.最低値";
