--- a/DereGuide/zh-Hant-TW.lproj/Localizable.strings
+++ b/DereGuide/zh-Hant-TW.lproj/Localizable.strings
@@ -808,3 +808,6 @@
 "重复发动上一个其他偶像发动过的技能" = "重複發動上一個其他偶像發動過的技能";
 "获得额外的COMBO加成，当前生命值越高加成越高" = "獲得額外的COMBO加成，當前生命值越高加成越高";
 "完成LIVE时，额外获得特别奖励" = "完成LIVE時，額外獲得特別獎勵";
+
+/* new in 1.7.2 */
+"最低%@等级" = "最低%@等級";
