--- a/DereGuide/Base.lproj/Localizable.strings
+++ b/DereGuide/Base.lproj/Localizable.strings
@@ -830,23 +830,22 @@
 "灰姑娘之路" = "灰姑娘之路";
 
 /* new in 1.8 */
+"表格类型" = "表格类型";
 "辅助技能" = "辅助技能";
 
+"动作模式" = "动作模式";
 "全连" = "全连";
 "挂机" = "挂机";
 
+"触发模式" = "触发模式";
 "随机" = "随机";
 "极限1" = "极限1";
 "极限2" = "极限2";
 "悲观" = "悲观";
 
-"面板类型" = "面板类型";
-"动作模式" = "动作模式";
-"触发模式" = "触发模式";
+"* 全P模式中所有Note都为Perfect\n* 挂机模式中除非技能增强和SSR强判技能同时存在，所有Note都将丢失" = "* 全P模式中所有Note都为Perfect\n* 挂机模式中除非技能增强和SSR强判技能同时存在，所有Note都将丢失";
+"* 随机模式中技能按照触发率随机触发\n* 极限1模式中所有Note取判定区间内的最大得分而且技能必定触发\n* 极限2模式中技能必定触发\n* 悲观模式中技能触发几率低于100%的技能必定不触发" = "* 随机模式中技能按照触发率随机触发\n* 极限1模式中所有Note取判定区间内的最大得分而且技能必定触发\n* 极限2模式中技能必定触发\n* 悲观模式中技能触发几率低于100%的技能必定不触发";
 
-"全P模式中所有Note都为Perfect\n挂机模式中除非技能增强和SSR强判技能同时存在，所有Note都将丢失" = "全P模式中所有Note都为Perfect\n挂机模式中除非技能增强和SSR强判技能同时存在，所有Note都将丢失";
-"随机模式中技能按照触发率随机触发\n极限1模式中所有Note取判定区间内的最大得分而且技能必定触发\n极限2模式中技能必定触发\n悲观模式中技能触发几率低于100%的技能必定不触发" = "随机模式中技能按照触发率随机触发\n极限1模式中所有Note取判定区间内的最大得分而且技能必定触发\n极限2模式中技能必定触发\n悲观模式中技能触发几率低于100%的技能必定不触发";
-
-"得分和辅助技能详情" = "得分和辅助技能详情";
+"Note列表视图" = "Note列表视图";
 
 "序号" = "序号";
