--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -828,3 +828,33 @@
 
 /* new in 1.7.4 */
 "灰姑娘之路" = "スシロー";
+
+/* new in 1.8 */
+"表格类型" = "表格类型";
+"辅助技能" = "辅助技能";
+
+"动作模式" = "动作模式";
+"全P" = "全P";
+"挂机" = "挂机";
+
+"触发模式" = "触发模式";
+"随机" = "随机";
+"极限1" = "极限1";
+"极限2" = "极限2";
+"悲观" = "悲观";
+
+"* 全P模式中所有Note都为Perfect\n* 挂机模式中除非技能增强和SSR强判技能同时存在，所有Note都将丢失" = "* 全P模式中所有Note都为Perfect\n* 挂机模式中除非技能增强和SSR强判技能同时存在，所有Note都将丢失";
+"* 随机模式中技能按照触发率随机触发\n* 极限1模式中所有Note取判定区间内的最大得分而且技能必定触发\n* 极限2模式中技能必定触发\n* 悲观模式中技能触发几率低于100%的技能必定不触发" = "* 随机模式中技能按照触发率随机触发\n* 极限1模式中所有Note取判定区间内的最大得分而且技能必定触发\n* 极限2模式中技能必定触发\n* 悲观模式中技能触发几率低于100%的技能必定不触发";
+
+"Note列表" = "Note列表";
+
+"序号" = "序号";
+
+"存活率%" = "存活率%";
+"S Rank率%" = "S Rank率%";
+"最高得分" = "最高得分";
+"模拟挂机模式" = "模拟挂机模式";
+
+"三色协同" = "三色协同";
+"当Cute、Cool和Passion偶像存在于队伍时，使所有PERFECT音符获得 %1$d%% 的分数加成/恢复你 %3$d 点生命，并获得额外的 %2$d%% 的COMBO加成" = "3タイプ全てのアイドル編成時、PERFECTのスコア %1$d%% アップ/ライフ %3$d 回復、COMBOボーナス %2$d%% アップ";
+"完成LIVE时，获得的粉丝数提高 %d%%" = "LIVEクリア時、獲得ファン数が %d%% アップ";
