--- a/DereGuide/zh-Hant.lproj/Localizable.strings
+++ b/DereGuide/zh-Hant.lproj/Localizable.strings
@@ -818,3 +818,33 @@
 
 /* new in 1.7.4 */
 "灰姑娘之路" = "灰姑娘之路";
+
+/* new in 1.8 */
+"表格类型" = "表格型別";
+"辅助技能" = "輔助技能";
+
+"动作模式" = "動作模式";
+"全P" = "全P";
+"挂机" = "掛機";
+
+"触发模式" = "觸發模式";
+"随机" = "隨機";
+"极限1" = "極限1";
+"极限2" = "極限2";
+"悲观" = "悲觀";
+
+"* 全P模式中所有Note都为Perfect\n* 挂机模式中除非技能增强和SSR强判技能同时存在，所有Note都将丢失" = "* 全P模式中所有Note都為Perfect\n* 掛機模式中除非技能增強和SSR強判技能同時存在，所有Note都將丟失";
+"* 随机模式中技能按照触发率随机触发\n* 极限1模式中所有Note取判定区间内的最大得分而且技能必定触发\n* 极限2模式中技能必定触发\n* 悲观模式中技能触发几率低于100%的技能必定不触发" = "* 隨機模式中技能按照觸發率隨機觸發\n* 極限1模式中所有Note取判定區間內的最大得分而且技能必定觸發\n* 極限2模式中技能必定觸發\n* 悲觀模式中技能觸發機率低於100%的技能必定不觸發";
+
+"Note列表" = "Note列表";
+
+"序号" = "序號";
+
+"存活率%" = "存活率%";
+"S Rank率%" = "S Rank率%";
+"最高得分" = "最高得分";
+"模拟挂机模式" = "模擬掛機模式";
+
+"三色协同" = "三色協同";
+"当Cute、Cool和Passion偶像存在于队伍时，使所有PERFECT音符获得 %1$d%% 的分数加成/恢复你 %3$d 点生命，并获得额外的 %2$d%% 的COMBO加成" = "當Cute、Cool和Passion偶像存在於隊伍時，使所有PERFECT音符獲得 %1$d%% 的分數加成/恢復你 %3$d 點生命，並獲得額外的 %2$d%% 的COMBO加成";
+"完成LIVE时，获得的粉丝数提高 %d%%" = "完成LIVE時，獲得的粉絲數提高 %d%%";
