--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -145,7 +145,7 @@
 "成功" = "成功";
 
 /* 设置页面 */
-"所有图片总计超过500MB，请检查您的网络环境或剩余流量，确认无误后再点击确定。" = "画像のサイズは合計で500MB以上です。wifi環境またはモバイルデータ通信量の残量を確認して、進んでください。";
+"所有图片总计超过500MB，请检查您的网络环境或剩余流量，确认无误后再点击确定。" = "画像のサイズは合計で500MB以上です。Wi-Fi環境またはモバイルデータ通信量の残量を確認して、続行してください。";
 
 /* 设置页面 */
 "打开邮箱失败" = "fail to open mail";
@@ -549,7 +549,7 @@
 "卡池封面" = "ガシャヘッダー";
 
 
-"队伍中存在未知的技能类型，计算结果可能不准确。" = "ユニットに未定義(undefined)のスキルタイプを存在します。計算結果の正確性は保証できません。";
+"队伍中存在未知的技能类型，计算结果可能不准确。" = "ユニットに未定義(undefined)のスキルタイプが存在します。計算結果の正確性は保証できません。";
 
 /* new in 1.2.3 */
 "变更时间" = "変更日時";
@@ -833,28 +833,28 @@
 "表格类型" = "表格类型";
 "辅助技能" = "辅助技能";
 
-"动作模式" = "动作模式";
-"全P" = "全P";
-"挂机" = "挂机";
+"动作模式" = "判定パターン";
+"全P" = "全パ";
+"挂机" = "放置";
 
-"触发模式" = "触发模式";
-"随机" = "随机";
-"极限1" = "极限1";
-"极限2" = "极限2";
-"悲观" = "悲观";
+"触发模式" = "発動パターン";
+"随机" = "ランダム";
+"极限1" = "極限1";
+"极限2" = "極限2";
+"悲观" = "サイレント";
 
-"* 全P模式中所有Note都为Perfect\n* 挂机模式中除非技能增强和SSR强判技能同时存在，所有Note都将丢失" = "* 全P模式中所有Note都为Perfect\n* 挂机模式中除非技能增强和SSR强判技能同时存在，所有Note都将丢失";
-"* 随机模式中技能按照触发率随机触发\n* 极限1模式中所有Note取判定区间内的最大得分而且技能必定触发\n* 极限2模式中技能必定触发\n* 悲观模式中技能触发几率低于100%的技能必定不触发" = "* 随机模式中技能按照触发率随机触发\n* 极限1模式中所有Note取判定区间内的最大得分而且技能必定触发\n* 极限2模式中技能必定触发\n* 悲观模式中技能触发几率低于100%的技能必定不触发";
+"* 全P模式中所有Note都为Perfect\n* 挂机模式中除非技能增强和SSR强判技能同时存在，所有Note都将丢失" = "* 「全パ」モードにノーツを全PERFECTとして計算します\n* 放置モードにスキルブースト及びSSR PERFECTサポートによるPERFECTを除き、ノーツを全MISSとして計算します";
+"* 随机模式中技能按照触发率随机触发\n* 极限1模式中所有Note取判定区间内的最大得分而且技能必定触发\n* 极限2模式中技能必定触发\n* 悲观模式中技能触发几率低于100%的技能必定不触发" = "* ランダムモードに特技は発動率によってランダムに発動されます\n* 極限1モードにはノーツを判定範囲でスコア最適値を取るよう補正を行い、特技100%発動として計算します\n* 極限2モードに特技100%発動として計算します\n* サイレントモードに、発動確率が100%以下の特技は発動しないとして計算します";
 
-"Note列表" = "Note列表";
+"Note列表" = "ノーツリスト";
 
-"序号" = "序号";
+"序号" = "番号";
 
-"存活率%" = "存活率%";
-"S Rank率%" = "S Rank率%";
-"最高得分" = "最高得分";
-"模拟挂机模式" = "模拟挂机模式";
+"存活率%" = "生存率%";
+"S Rank率%" = "Ｓランク率%";
+"最高得分" = "スコア最高値";
+"模拟挂机模式" = "放置モード";
 
-"三色协同" = "三色协同";
+"三色协同" = "シナジー";
 "当Cute、Cool和Passion偶像存在于队伍时，使所有PERFECT音符获得 %1$d%% 的分数加成/恢复你 %3$d 点生命，并获得额外的 %2$d%% 的COMBO加成" = "3タイプ全てのアイドル編成時、PERFECTのスコア %1$d%% アップ/ライフ %3$d 回復、COMBOボーナス %2$d%% アップ";
 "完成LIVE时，获得的粉丝数提高 %d%%" = "LIVEクリア時、獲得ファン数が %d%% アップ";
