--- a/DereGuide/ja.lproj/InfoPlist.strings
+++ b/DereGuide/ja.lproj/InfoPlist.strings
@@ -6,8 +6,8 @@
   Copyright © 2016年 zzk. All rights reserved.
 */
 
-NSPhotoLibraryUsageDescription = "ここでアプリをアルバムへのアクセス許可を同意してください。プライバシーの変更はあとでシステム設定に変更することができます。";
-NSPhotoLibraryAddUsageDescription = "ここでアプリをアルバムへのアクセス許可を同意してください。プライバシーの変更はあとでシステム設定に変更することができます。";
+NSPhotoLibraryUsageDescription = "ここでアプリをアルバムへのアクセス権限を許可してください。プライバシーの変更はあとでシステム設定に変更することができます。";
+NSPhotoLibraryAddUsageDescription = "ここでアプリをアルバムへのアクセス権限を許可してください。プライバシーの変更はあとでシステム設定に変更することができます。";
 shortcutItemTitle1 = "カード";
 shortcutItemTitle2 = "譜面";
 shortcutItemTitle3 = "イベント";
