--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -830,8 +830,8 @@
 "灰姑娘之路" = "スシロー";
 
 /* new in 1.8 */
-"表格类型" = "表格类型";
-"辅助技能" = "辅助技能";
+"表格类型" = "テーブルタイプ";
+"辅助技能" = "サポート特技";
 
 "动作模式" = "判定パターン";
 "全P" = "全パ";
