add advance option: simulate with double hp if can gain healing effect in groove.

--- a/DereGuide/Base.lproj/Localizable.strings
+++ b/DereGuide/Base.lproj/Localizable.strings
@@ -858,3 +858,6 @@
 "三色协同" = "三色协同";
 "当Cute、Cool和Passion偶像存在于队伍时，使所有PERFECT音符获得 %1$d%% 的分数加成/恢复你 %3$d 点生命，并获得额外的 %2$d%% 的COMBO加成" = "当Cute、Cool和Passion偶像存在于队伍时，使所有PERFECT音符获得 %1$d%% 的分数加成/恢复你 %3$d 点生命，并获得额外的 %2$d%% 的COMBO加成";
 "完成LIVE时，获得的粉丝数提高 %d%%" = "完成LIVE时，获得的粉丝数提高 %d%%";
+
+/* new in 1.8.1 */
+"Groove模式中，若队伍可发动生命恢复效果，起始状态就拥有两倍生命值。" = "Groove模式中，若队伍可发动生命恢复效果，起始状态就拥有两倍生命值。";
