--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -858,3 +858,6 @@
 "三色协同" = "シナジー";
 "当Cute、Cool和Passion偶像存在于队伍时，使所有PERFECT音符获得 %1$d%% 的分数加成/恢复你 %3$d 点生命，并获得额外的 %2$d%% 的COMBO加成" = "3タイプ全てのアイドル編成時、PERFECTのスコア %1$d%% アップ/ライフ %3$d 回復、COMBOボーナス %2$d%% アップ";
 "完成LIVE时，获得的粉丝数提高 %d%%" = "LIVEクリア時、獲得ファン数が %d%% アップ";
+
+/* new in 1.8.1 */
+"Groove模式中，若队伍可发动生命恢复效果，起始状态就拥有两倍生命值。" = "ユニットがライフ回復を発動できる場合、Grooveモードにライフは２倍で計算する";
