--- a/DereGuide/zh-Hant-TW.lproj/Localizable.strings
+++ b/DereGuide/zh-Hant-TW.lproj/Localizable.strings
@@ -848,3 +848,6 @@
 "三色协同" = "三色協同";
 "当Cute、Cool和Passion偶像存在于队伍时，使所有PERFECT音符获得 %1$d%% 的分数加成/恢复你 %3$d 点生命，并获得额外的 %2$d%% 的COMBO加成" = "當Cute、Cool和Passion偶像存在於隊伍時，使所有PERFECT音符獲得 %1$d%% 的分數加成/恢復你 %3$d 點生命，並獲得額外的 %2$d%% 的COMBO加成";
 "完成LIVE时，获得的粉丝数提高 %d%%" = "完成LIVE時，獲得的粉絲數提高 %d%%";
+
+/* new in 1.8.1 */
+"Groove模式中，若队伍可发动生命恢复效果，起始状态就拥有两倍生命值。" = "Groove模式中，若隊伍可發動生命恢復效果，起始狀態就擁有兩倍生命值。";
