ライブスパークル -> ライフスパークル

--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -813,7 +813,7 @@
 "正在完成更新" = "更新は間もなく終了です";
 
 /* new in 1.7.1 */
-"生命闪耀" = "ライブスパークル";
+"生命闪耀" = "ライフスパークル";
 "重复发动上一个其他偶像发动过的技能" = "直前に発動した他アイドルの特技効果を繰り返す";
 "获得额外的COMBO加成，当前生命值越高加成越高" = "ライフ値が多いほどCOMBOボーナスアップ";
 "完成LIVE时，额外获得特别奖励" = "LIVEクリア時、特別報酬を追加で獲得";
