support for premium gacha

--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -497,7 +497,7 @@
 "限定卡池" = "限定ガシャ";
 "FES限定卡池" = "フェス限ガシャ";
 "单属性卡池" = "タイプセレクト";
-"普通卡池" = "恒常ガシャ";
+"普通试音会" = "恒常ガシャ";
 
 
 /* new in v1.2.0(7+) */
@@ -861,3 +861,6 @@
 
 /* new in 1.8.1 */
 "Groove模式中，若队伍可发动生命恢复效果，起始状态就拥有两倍生命值。" = "ユニットがライフ回復を発動できる場合、Grooveモードにライフは２倍で計算する";
+
+/* new in 1.8.3 */
+"高级试音会" = "プレミアムガシャ";
