--- a/DereGuide/zh-Hant-TW.lproj/Localizable.strings
+++ b/DereGuide/zh-Hant-TW.lproj/Localizable.strings
@@ -488,7 +488,7 @@
 "限定卡池" = "限定卡池";
 "FES限定卡池" = "FES限定卡池";
 "单属性卡池" = "單屬性卡池";
-"普通卡池" = "普通卡池";
+"普通试音会" = "普通試音會";
 
 /* new in v1.2.0(7+) */
 "3D模型" = "3D模型";
@@ -851,3 +851,6 @@
 
 /* new in 1.8.1 */
 "Groove模式中，若队伍可发动生命恢复效果，起始状态就拥有两倍生命值。" = "Groove模式中，若隊伍可發動生命恢復效果，起始狀態就擁有兩倍生命值。";
+
+/* new in 1.8.3 */
+"高级试音会" = "高階試音會";
