--- a/DereGuide/Base.lproj/Localizable.strings
+++ b/DereGuide/Base.lproj/Localizable.strings
@@ -494,7 +494,7 @@
 "限定卡池" = "限定卡池";
 "FES限定卡池" = "FES限定卡池";
 "单属性卡池" = "单属性卡池";
-"普通卡池" = "普通卡池";
+"普通试音会" = "普通试音会";
 
 
 /* new in v1.2.0(7+) */
@@ -861,3 +861,6 @@
 
 /* new in 1.8.1 */
 "Groove模式中，若队伍可发动生命恢复效果，起始状态就拥有两倍生命值。" = "Groove模式中，若队伍可发动生命恢复效果，起始状态就拥有两倍生命值。";
+
+/* new in 1.8.3 */
+"高级试音会" = "高级试音会";
