--- a/DereGuide/en.lproj/Localizable.strings
+++ b/DereGuide/en.lproj/Localizable.strings
@@ -490,7 +490,7 @@
 "限定卡池" = "Limited Gacha";
 "FES限定卡池" = "CinFes Gacha";
 "单属性卡池" = "Type Select Gacha";
-"普通卡池" = "Normal Gacha";
+"普通试音会" = "Normal Gacha";
 
 /* new in v1.2.0(7+) */
 "3D模型" = "3D Model";
@@ -856,3 +856,6 @@
 
 /* new in 1.8.1 */
 "Groove模式中，若队伍可发动生命恢复效果，起始状态就拥有两倍生命值。" = "In groove, if you can gain healing effect, simulate with double hp at begining";
+
+/* new in 1.8.3 */
+"高级试音会" = "Premium Gacha";
