add active, smart and unique value of idols

--- a/DereGuide/en.lproj/Localizable.strings
+++ b/DereGuide/en.lproj/Localizable.strings
@@ -465,7 +465,7 @@
 "血型" = "Blood type";
 "身高" = "Height";
 "体重" = "Weight";
-"五十音" = "Alphabetically";
+"五十音" = "Kana";
 "游戏编号" = "Character ID";
 "生日" = "Birthday";
 
