--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -843,7 +843,6 @@
 "极限2" = "極限2";
 "悲观" = "サイレント";
 
-"* 全P模式中所有Note都为Perfect\n* 挂机模式中除非技能增强和SSR强判技能同时存在，所有Note都将丢失" = "* 「全パ」モードにノーツを全PERFECTとして計算します\n* 放置モードにスキルブースト及びSSR PERFECTサポートによるPERFECTを除き、ノーツを全MISSとして計算します";
 "* 随机模式中技能按照触发率随机触发\n* 极限1模式中所有Note取判定区间内的最大得分而且技能必定触发\n* 极限2模式中技能必定触发\n* 悲观模式中技能触发几率低于100%的技能必定不触发" = "* ランダムモードに特技は発動率によってランダムに発動されます\n* 極限1モードにはノーツを判定範囲でスコア最適値を取るよう補正を行い、特技100%発動として計算します\n* 極限2モードに特技100%発動として計算します\n* サイレントモードに、発動確率が100%以下の特技は発動しないとして計算します";
 
 "Note列表" = "ノーツリスト";
@@ -867,3 +866,7 @@
 
 /* new in 1.8.4 */
 "排名" = "順位";
+
+/* new in 1.8.5 */
+"挂机模式中，手动打前x秒" = "挂机模式中，手动打前x秒";
+"* 全P模式中所有Note都为Perfect\n* 挂机模式中除非技能增强和SSR强判技能同时存在，所有Note都将丢失\n* 如果您在高级选项中设置了手动打前x秒，则前x秒视为全P模式" = "* 「全パ」モードにノーツを全PERFECTとして計算します\n* 放置モードにスキルブースト及びSSR PERFECTサポートによるPERFECTを除き、ノーツを全MISSとして計算します";
