--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -868,5 +868,6 @@
 "排名" = "順位";
 
 /* new in 1.8.5 */
-"挂机模式中，手动打前x秒" = "挂机模式中，手动打前x秒";
-"* 全P模式中所有Note都为Perfect\n* 挂机模式中除非技能增强和SSR强判技能同时存在，所有Note都将丢失\n* 如果您在高级选项中设置了手动打前x秒，则前x秒视为全P模式" = "* 「全パ」モードにノーツを全PERFECTとして計算します\n* 放置モードにスキルブースト及びSSR PERFECTサポートによるPERFECTを除き、ノーツを全MISSとして計算します";
+"挂机模式中，手动打前 x 秒" = "挂机模式中，手动打前 x 秒";
+"挂机模式中，手动打前 x combo" = "挂机模式中，手动打前 x combo";
+"* 全P模式中所有Note都为Perfect\n* 挂机模式中除非技能增强和SSR强判技能同时存在，所有Note都将丢失\n* 如果您在高级选项中设置了手动打前 x 秒或前 x combo，则指定范围的Note视为全P" = "* 「全パ」モードにノーツを全PERFECTとして計算します\n* 放置モードにスキルブースト及びSSR PERFECTサポートによるPERFECTを除き、ノーツを全MISSとして計算します";
