--- a/DereGuide/zh-Hant-TW.lproj/Localizable.strings
+++ b/DereGuide/zh-Hant-TW.lproj/Localizable.strings
@@ -833,7 +833,7 @@
 "极限2" = "極限2";
 "悲观" = "悲觀";
 
-"* 全P模式中所有Note都为Perfect\n* 挂机模式中除非技能增强和SSR强判技能同时存在，所有Note都将丢失\n* 如果您在高级选项中设置了手动打前x秒，则前x秒视为全P模式" = "* 全P模式中所有Note都為Perfect\n* 掛機模式中除非技能增強和SSR強判技能同時存在，所有Note都將丟失\n* 如果您在高階選項中設定了手動打前x秒，則前x秒視為全P模式";
+"* 全P模式中所有Note都为Perfect\n* 挂机模式中除非技能增强和SSR强判技能同时存在，所有Note都将丢失\n* 如果您在高级选项中设置了手动打前 x 秒或前 x combo，则指定范围的Note视为全P" = "* 全P模式中所有Note都為Perfect\n* 掛機模式中除非技能增強和SSR強判技能同時存在，所有Note都將丟失\n* 如果您在高階選項中設定了手動打前 x 秒或前 x combo，則指定範圍的Note視為全P";
 "* 随机模式中技能按照触发率随机触发\n* 极限1模式中所有Note取判定区间内的最大得分而且技能必定触发\n* 极限2模式中技能必定触发\n* 悲观模式中技能触发几率低于100%的技能必定不触发" = "* 隨機模式中技能按照觸發率隨機觸發\n* 極限1模式中所有Note取判定區間內的最大得分而且技能必定觸發\n* 極限2模式中技能必定觸發\n* 悲觀模式中技能觸發機率低於100%的技能必定不觸發";
 
 "Note列表" = "Note列表";
@@ -859,4 +859,5 @@
 "排名" = "排名";
 
 /* new in 1.8.5 */
-"挂机模式中，手动打前x秒" = "掛機模式中，手動打前x秒";
+"挂机模式中，手动打前 x 秒" = "掛機模式中，手動打前x秒";
+"挂机模式中，手动打前 x combo" = "挂机模式中，手动打前 x combo";
