--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -871,3 +871,6 @@
 "挂机模式中，手动打前 x 秒" = "放置モードに、前 x 秒に留守番をする";
 "挂机模式中，手动打前 x combo" = "放置モードに、前 x コンボに留守番をする";
 "* 全P模式中所有Note都为Perfect\n* 挂机模式中除非技能增强和SSR强判技能同时存在，所有Note都将丢失\n* 如果您在高级选项中设置了手动打前 x 秒或前 x combo，则指定范围的Note视为全P" = "* 「全パ」モードにノーツを全PERFECTとして計算します\n* 放置モードにスキルブースト及びSSR PERFECTサポートによるPERFECTを除き、ノーツを全MISSとして計算します\n* アドバンスオプションに留守番設定をした場合、設定された範囲のノーツは全PERFECTになる";
+
+/* new in 1.8.6 */
+"挂机模式模拟次数" = "放置モードシミュレート回数";
