--- a/DereGuide/zh-Hans.lproj/Localizable.strings
+++ b/DereGuide/zh-Hans.lproj/Localizable.strings
@@ -871,3 +871,6 @@
 /* new in 1.8.5 */
 "挂机模式中，手动打前 x 秒" = "挂机模式中，手动打前 x 秒";
 "挂机模式中，手动打前 x combo" = "挂机模式中，手动打前 x combo";
+
+/* new in 1.8.6 */
+"挂机模式模拟次数" = "挂机模式模拟次数";
