--- a/DereGuide/en.lproj/Localizable.strings
+++ b/DereGuide/en.lproj/Localizable.strings
@@ -866,3 +866,6 @@
 /* new in 1.8.5 */
 "挂机模式中，手动打前 x 秒" = "In AFK mode, play for the first x seconds";
 "挂机模式中，手动打前 x combo" = "In AFK mode, play for the first x combo";
+
+/* new in 1.8.6 */
+"挂机模式模拟次数" = "AFK mode simulation times";
